--- a/web/views/layout.pug
+++ b/web/views/layout.pug
@@ -6,16 +6,19 @@ html(lang='en')
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
     link(rel="stylesheet", type="text/css" href="/styles/style1.css")
-    link(rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css")
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js")
+    link(rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css")
+    link(rel="stylesheet" href="styles/style.min.css")
+    script(src="https://code.jquery.com/jquery-3.7.1.js")
+    script(src="https://code.jquery.com/ui/1.14.1/jquery-ui.js")    
     script(src="scripts/musicclient.js")
+    script(src="scripts/jstree.min.js")
     //- script(src="scripts/certs/certs.js")
     //- script(src="scripts/users/users.js")
     //- script(src="scripts/tags/tags.js")
     //- script(src="scripts/linecache.js")
     //- script(src="scripts/signin.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js") 
-    script(src="https://code.jquery.com/ui/1.13.2/jquery-ui.js")
+    //- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js") 
+    //- script(src="https://code.jquery.com/ui/1.13.2/jquery-ui.js")
     //- title #{title} #{version} | Local Certificate Manager
     title | Music Library
   body
