--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -1,10 +1,22 @@
 extends layout
 block layout-content 
-    .View 
+    .view 
         .header
             h1 Music Library
         .content
-            .stuff Stuff here
+            .tabs#tabs
+                ul#tablist
+                    each node in nodes
+                        li(data-nodeid=node.nodeId)
+                            a(href=`#tabs-${node.nodeId}`) #{node.name}
+                each node in nodes
+                    div.container(id=`tabs-${node.nodeId}`)
+                        .box(data-populated=0 id=`#tree-${node.nodeId}`)
+                        .box content
+
             audio.audio-player(controls)
-                source(src="path/to/your/audiofile.mp3" type="audio/mpeg")
+                //- source(src="path/to/your/audiofile.mp3" type="audio/mpeg")
                 Your browser does not support the audio element.
+
+//- <li data-nodeid="${data[i].nodeId}"><a href="#tabs-${data[i].nodeId}">${data[i].name}</a></li>`);
+//- tabList.parent().append(`<div class="container" id="tabs-${data[i].nodeId}"><div class="box" data-populated="0" id="tree-${data[i].nodeId}"></div><div class="box">content</div></div>`);                
